[tool.poetry]
name = "flask-sample"
version = "0.0.1"
description = "A sample project to practice Flask framework"
authors = ["aerfus <aerfus@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flask_sample = "flask_sample.__main__:main"
test = 'scripts:test'